--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ bleach==3.2.1
 certifi==2020.6.20
 chardet==3.0.4
 colorama==0.4.4
+databases==0.4.0
 docutils==0.16
 idna==2.10
 keyring==21.4.0
@@ -16,6 +17,7 @@ requests==2.24.0
 requests-toolbelt==0.9.1
 rfc3986==1.4.0
 six==1.15.0
+SQLAlchemy==1.3.20
 tqdm==4.51.0
 twine==3.2.0
 urllib3==1.25.11
