--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ chardet==3.0.4
 colorama==0.4.4
 databases==0.4.0
 docutils==0.16
+fastapi==0.61.1
 idna==2.10
 keyring==21.4.0
 packaging==20.4
@@ -18,6 +19,7 @@ requests-toolbelt==0.9.1
 rfc3986==1.4.0
 six==1.15.0
 SQLAlchemy==1.3.20
+starlette==0.13.6
 tqdm==4.51.0
 twine==3.2.0
 urllib3==1.25.11
