--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,25 @@
+aiomysql==0.0.20
 bleach==3.2.1
 certifi==2020.6.20
+cffi==1.14.3
 chardet==3.0.4
+click==7.1.2
 colorama==0.4.4
+cryptography==3.2.1
 databases==0.4.0
 docutils==0.16
 fastapi==0.61.1
+h11==0.11.0
 idna==2.10
 keyring==21.4.0
+mysqlclient==2.0.1
 packaging==20.4
 pkginfo==1.6.1
 plac==1.2.0
+pycparser==2.20
 pydantic==1.7.1
 Pygments==2.7.2
+PyMySQL==0.9.2
 pyparsing==2.4.7
 readme-renderer==28.0
 requests==2.24.0
@@ -23,4 +31,5 @@ starlette==0.13.6
 tqdm==4.51.0
 twine==3.2.0
 urllib3==1.25.11
+uvicorn==0.12.2
 webencodings==0.5.1
