--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,17 @@
+aiomysql==0.0.20
+cffi==1.14.3
+click==7.1.2
+cryptography==3.2.1
+databases==0.4.0
 envoy==0.0.3
+fastapi==0.61.1
+h11==0.11.0
+mysqlclient==2.0.1
 plac==1.2.0
+pycparser==2.20
+pydantic==1.7.1
+PyMySQL==0.9.2
+six==1.15.0
+SQLAlchemy==1.3.20
+starlette==0.13.6
+uvicorn==0.12.2
