--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,17 @@ envoy==0.0.3
 fastapi==0.61.1
 h11==0.11.0
 mysqlclient==2.0.1
+numpy==1.19.3
+orm==0.1.5
+pandas==1.1.4
 plac==1.2.0
 pycparser==2.20
 pydantic==1.7.1
 PyMySQL==0.9.2
+python-dateutil==2.8.1
+pytz==2020.1
 six==1.15.0
 SQLAlchemy==1.3.20
 starlette==0.13.6
+typesystem==0.2.4
 uvicorn==0.12.2
