--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,40 @@
+aiomysql==0.0.20
+bleach==3.2.1
+certifi==2020.6.20
+cffi==1.14.3
+chardet==3.0.4
 click==7.1.2
+colorama==0.4.4
+cryptography==3.2.1
+databases==0.4.0
+docutils==0.16
+fastapi==0.61.1
+h11==0.11.0
+idna==2.10
+keyring==21.4.0
+mysqlclient==2.0.1
 numpy==1.19.4
+orm==0.1.5
+packaging==20.4
 pandas==1.1.4
+pkginfo==1.6.1
+pycparser==2.20
+pydantic==1.7.2
+Pygments==2.7.2
+PyMySQL==0.9.2
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.4
+readme-renderer==28.0
+requests==2.24.0
+requests-toolbelt==0.9.1
+rfc3986==1.4.0
 six==1.15.0
+SQLAlchemy==1.3.20
+starlette==0.13.6
+tqdm==4.51.0
+twine==3.2.0
+typesystem==0.2.4
+urllib3==1.25.11
+uvicorn==0.12.2
+webencodings==0.5.1
