--- a/fastapi_generator/templates/sub/config
+++ b/fastapi_generator/templates/sub/config
@@ -4,6 +4,8 @@ from app.config import project
 
 
 class Settings(BaseSettings):
+    ps = project
+
     # dir
     root_dir = project.SUB_APP_DIR / 'sign_app_name'
     router_dir = root_dir / 'router'
